# KalmanFusion

./: .gitignore  CMakeLists.txt  README.md  draw.py
data/: sample-laser-radar-measurement-data-1.txt
include/: ground_truth_package.h  iofile.h  kalmanfilter.h  measurement_package.h  sensorFusion.h
output/: gt-2.txt  out-1.txt  out-2.txt
src/: kalmanfilter.cpp  kalmanfilter.h  main.cpp  sensorFusion.cpp
